# bittr

./: .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  package.json
.github/workflows/: rust.yml
backend/: .env  Cargo.toml
backend/migrations/2021-02-22-033223_add_users/: up.sql
backend/src/: app_state.rs  db_actor.rs  main.rs  messages.rs  models.rs  schema.rs  services.rs
backend/src/actor/db_actor/: mod.rs
backend/src/actor/db_actor/handlers/: create.rs  delete.rs  mod.rs  retrieve.rs  update.rs  update_0.rs
backend/src/actor/db_actor/handlers/delete/: delete_with_username.rs  delete_with_uuid.rs  mod.rs
backend/src/actor/db_actor/handlers/retrieve/: mod.rs  retrieve_with_username.rs  retrieve_with_uuid.rs
backend/src/actor/db_actor/handlers/update/: mod.rs  update_with_username.rs  update_with_uuid.rs
backend/src/app/: app_state.rs
backend/src/messages/: create.rs  delete.rs  retrieve.rs  update.rs
backend/src/messages/delete/: delete_with_username.rs  delete_with_uuid.rs  mod.rs
backend/src/messages/retrieve/: mod.rs  retrieve_with_username.rs  retrieve_with_uuid.rs
backend/src/messages/update/: mod.rs  update_with_username.rs  update_with_uuid.rs
backend/src/models/: insertable_user.rs  mod.rs  queryable_user.rs
backend/src/services/: mod.rs
backend/src/services/users/: inputs.rs  io.rs  mod.rs
backend/src/services/users/id/: mod.rs
backend/src/services/users/username/: mod.rs
backend2/: index.js  package-lock.json  package.json
frontend/: package-lock.json  package.json
frontend/public/: index.html
hooks/: pre-push
(+3 files in other folders)
