[package]
name = "backend"
version = "0.1.0"
authors = ["raunakab <rabhagat31@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-cors = "0.5.4"
serde = "1.0.123"
uuid = { version = "0.8", features = ["serde", "v4"] }
